--- a/profile.html
+++ b/profile.html
@@ -10,14 +10,15 @@
       <div id="wrapper">	
         <header class="top">
           <div id="header-inner">
-           <nav>
-              <a href="index.html" >HOME</a>
-              <a href="business">東海鋳造所の強み</a>
-             <a href="profile.html">会社紹介</a>
-             <img id="logo" src="tokai_logo.jpg" width="120" height="70" alt="株式会社東海鋳造所"/>
-             <a href="employment">採用情報</a>
-             <a href="access">アクセス</a>
-             <a href="inquiry">問い合わせ</a>
+            <center><img id="logo" src="tokai_logo.jpg" width="120" height="70" alt="株式会社東海鋳造所"/></center>
+          <nav>
+            <a href="index.html" >HOME</a>
+            <a href="business">東海鋳造所の強み</a>
+           <a href="profile.html">会社紹介</a>
+           <!-- <img id="logo" src="tokai_logo.jpg" width="120" height="70" alt="株式会社東海鋳造所"/> -->
+           <a href="employment">採用情報</a>
+           <a href="access">アクセス</a>
+           <a href="inquiry">問い合わせ</a>
            </nav>
          </div> 
         </header> 
